manifests/common/oidc-client/oauth2-proxy/components/istio-external-auth-domain/authorizationpolicy.istio-ingressgateway-oauth2-proxy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: istio-ingressgateway-oauth2-proxy
  namespace: istio-system
spec:
  action: CUSTOM
  provider:
    name: oauth2-proxy
  selector:
    matchLabels:
      app: istio-ingressgateway
  rules:
  - to:
    - operation:
        notHosts:
        - "*.admin-profile.<<domain>>"
